--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -5,3 +5,9 @@
 % If you want to split the blueprint content into several files then
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance.
+
+\chapter{Introduction}
+
+The main goal of this project is to prove the local-in-time existence of inviscid solutions.
+
+\input{chapters/Hölder Space.tex}
